# kokkos-utils

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dockerfile  version.json
.devcontainer/: devcontainer.json  dockerfile
.github/: pull_request_template.md
.github/workflows/: build.yml
cmake/presets/: kokkos.json
docker/: dockerfile
docs/: CMakeLists.txt  tests.dox
include/concepts/: View.hpp
include/kokkos-utils/array/: compare.hpp
include/kokkos-utils/atomics/: InsertOp.hpp
include/kokkos-utils/concepts/: DualView.hpp  ExecutionSpace.hpp  MemorySpace.hpp  Space.hpp  View.hpp
include/kokkos-utils/impl/: type_list.hpp  type_traits.hpp
include/kokkos-utils/view/: extents.hpp  slice.hpp
requirements/: requirements.system.txt
tests/: CMakeLists.txt  main.cpp
tests/atomics/: CMakeLists.txt  test_InsertOp.cpp
tests/concepts/: CMakeLists.txt  test_DualView.cpp  test_ExecutionSpace.cpp  test_MemorySpace.cpp  test_Space.cpp  test_View.cpp
tests/impl/: CMakeLists.txt  test_type_list.cpp  test_type_traits.cpp
tests/view/: CMakeLists.txt  test_extents.cpp  test_slice.cpp
